deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  labels:
    app: home
spec:
  selector:
    matchLabels:
      app: home
  replicas: 1
  template:
    metadata:
      name: home
      labels:
        app: home
    spec:
      containers:
        - name: home
          image: cr.ixk.me/syfxlin/home
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
      restartPolicy: Always
