deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: home
spec:
  selector:
    app: home
  ports:
    - name: http
      port: 80
  type: ClusterIP
